[tool.poetry]
name = "pdp"
version = "0.1.0"
description = "Desing pattern in python"
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.10.1"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
ghp-import = "^1.1.0"
notebook = "^6.3.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
